--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<a href="itms-services://?action=download-manifest&url=https://raw.githubusercontent.com/deanta217/ipa-files/main/manifest.plist">Install App</a>
+<a href="itms-services://?action=download-manifest&url=https://raw.githubusercontent.com/deanta217/ipa-files/main/hdoplay.plist">Install HDO Play</a>
