--- a/index.html
+++ b/index.html
@@ -5,3 +5,7 @@
 <a 
   href="itms-services://?action=download-manifest&url=https://raw.githubusercontent.com/deanta217/ipa-files/main/hdoplay.plist">Install HDO Play
 </a>
+</n>
+<a 
+  href="itms-services://?action=download-manifest&url=https://raw.githubusercontent.com/deanta217/iOS-Applications/main/SM64-iOS.plist">Install HDO Play
+</a>
