--- a/index.html
+++ b/index.html
@@ -7,5 +7,5 @@
 </a>
 </n>
 <a 
-  href="itms-services://?action=download-manifest&url=https://raw.githubusercontent.com/deanta217/iOS-Applications/main/SM64-iOS.plist">Install HDO Play
+  href="itms-services://?action=download-manifest&url=https://raw.githubusercontent.com/deanta217/iOS-Applications/main/SM64-iOS.plist">Install SM64
 </a>
