--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <h1>iOS Applications</h1>
 </n>
-<h3>Signed</h3>
+<h3>Revoked!</h3>
 <p>To install the applications simply click on the link. Then iOS will prompt you asking if you want to download. Click yes. After it installs open Settings then go to General > VPN & Device Management. Click on the certificate under Enterprise Certificates. Then click Trust. You now installed the app.</p>
 <a 
   href="itms-services://?action=download-manifest&url=https://raw.githubusercontent.com/deanta217/ipa-files/main/hdoplay.plist">Install HDO Play
